--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -12,7 +12,8 @@
 
 
 	<script>
-		var w = 1280,
+		var currentJson = 0,
+            w = 1280,
 		    h = 800,
 		    r = 720,
 		    x = d3.scale.linear().range([0, r]),
@@ -30,7 +31,7 @@
 		  .append("svg:g")
 		    .attr("transform", "translate(" + (w - r) / 2 + "," + (h - r) / 2 + ")");
 
-		d3.json("static/proj_data.json", function(data) {
+		d3.json("static/0.json", function(data) {
 		  node = root = data;
 
 		  var nodes = pack.nodes(root);
@@ -42,7 +43,6 @@
 		      .attr("cx", function(d) { return d.x; })
 		      .attr("cy", function(d) { return d.y; })
 		      .attr("r", function(d) { return d.r; })
-		      .on("click", function(d) { return zoom(node == d ? root : d); });
 
 		  vis.selectAll("text")
 		      .data(nodes)
@@ -54,31 +54,40 @@
 		      .attr("text-anchor", "middle")
 		      .style("opacity", function(d) { return d.r > 20 ? 1 : 0; })
 		      .text(function(d) { return d.name; });
-
-		  d3.select(window).on("click", function() { zoom(root); });
 		});
 
-		function zoom(d, i) {
-		  var k = r / d.r / 2;
-		  x.domain([d.x - d.r, d.x + d.r]);
-		  y.domain([d.y - d.r, d.y + d.r]);
+        setTimeout(setInterval(update, 1000), 1000);
 
-		  var t = vis.transition()
-		      .duration(d3.event.altKey ? 7500 : 750);
+        function update() {
+            var jsonLoc = "static/"+currentJson+".json";
+            d3.json(jsonLoc, function(data) {
+                node = root = data;
 
-		  t.selectAll("circle")
-		      .attr("cx", function(d) { return x(d.x); })
-		      .attr("cy", function(d) { return y(d.y); })
-		      .attr("r", function(d) { return k * d.r; });
+                var nodes = pack.nodes(root);
 
-		  t.selectAll("text")
-		      .attr("x", function(d) { return x(d.x); })
-		      .attr("y", function(d) { return y(d.y); })
-		      .style("opacity", function(d) { return k * d.r > 20 ? 1 : 0; });
+                vis.selectAll("circle")
+                    .data(nodes)
+                    .transition()
+                    .duration(1000)
+                    .attr("class", function(d) { return d.children ? "parent" : "child"; })
+                    .attr("cx", function(d) { return d.x; })
+                    .attr("cy", function(d) { return d.y; })
+                    .attr("r", function(d) { return d.r; });
 
-		  node = d;
-		  d3.event.stopPropagation();
-		}
+                vis.selectAll("text")
+                    .data(nodes)
+                    .transition(1)
+                    .duration(1000)
+                    .attr("class", function(d) { return d.children ? "parent" : "child"; })
+                    .attr("x", function(d) { return d.x; })
+                    .attr("y", function(d) { return d.y; })
+                    .attr("dy", ".35em")
+                    .attr("text-anchor", "middle")
+                    .style("opacity", function(d) { return d.r > 20 ? 1 : 0; })
+                    .text(function(d) { return d.name; });
+            });
+            currentJson += 1;
+        }
 
 		var data; // a global
 
