added sample visualizer json and gravatars, fixed gitlog_parser.py bug

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,96 +1,127 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>UBC Victorious Secret - 410 Project</title>
-    <script src="http://d3js.org/d3.v2.js"></script>
-   	<link rel="stylesheet" href="/static/css/index.css" type="text/css" media="screen"/>
-</head>
+
+<!DOCTYPE html>
+<meta charset="utf-8">
+<style>
+
+.node {
+  stroke: #fff;
+  stroke-width: 1.5px;
+}
+
+.link {
+  stroke: #999;
+  stroke-opacity: .6;
+}
+
+</style>
 <body>
 
-    <h1>UBC Victorious Secret - 410 Project</h1>
+<script src="http://d3js.org/d3.v3.min.js"></script>
+<script>
+
+// BASIC SETUP
+var frameDelay = 1000; // in milliseconds
+var hideTimer = 1500; // in milliseconds
+var width = 1000,
+    height = 1000;
+
+var color = d3.scale.category20();
+
+var svg = d3.select("body").append("svg")
+    .attr("width", width)
+    .attr("height", height);
+	
+// Clears current frame from the svg 
+function clearSVG() { d3.selectAll("svg > *").remove(); return true;}
+
+// The force-directed layout creator
+function frame(jsonUrl) {
+var force = d3.layout.force()
+    .charge(-500)
+    .linkDistance(30)
+    .size([width, height]);
+
+d3.json(jsonUrl, function(error, graph) {
+  force
+      .nodes(graph.nodes)
+      .links(graph.links)
+      .start();
+
+  var link = svg.selectAll(".link")
+      .data(graph.links)
+    .enter().append("line")
+      .attr("class", "link")
+      .style("stroke-width", function(d) { return Math.sqrt(d.value); });
+	  
+	   var node = svg.selectAll(".node")
+		.data(graph.nodes)
+		.enter().append("image")
+		.attr("xlink:href", function(d) { if (d.type == "author")
+											{ return d.gravatar;}
+										else (d.type == "class")
+											{	if (d.smell_level == 0)
+													{ return "static/smell_level0.png";}
+												else if (d.smell_level == 1)
+													{ return "static/smell_level1.png";}
+												else if (d.smell_level == 2)
+													{ return "static/smell_level2.png";}
+												else
+													{ return "static/smell_level3.png";}
+												}})
+		// .attr("x", function(d) { if (d.type == "class") {return -1*(d.dimension/2);}})
+		// .attr("y", function(d) { if (d.type == "class") {return -1*(d.dimension/2);}})
+      .attr("width", function(d) { return d.dimension;})
+      .attr("height", function(d) { return d.dimension;});
+
+  node.append("title")
+      .text(function(d) { return d.name; });
+
+  force.on("tick", function() {
+    link.attr("x1", function(d) { return d.source.x; })
+        .attr("y1", function(d) { return d.source.y; })
+        .attr("x2", function(d) { return d.target.x; })
+        .attr("y2", function(d) { return d.target.y; });
+
+    node.attr("x", function(d) {return d.x; })
+		.attr("y", function(d) {return d.y; });
+  });
+});
+return true;
+}
+
+var currentJson = 0;
+var max_json_files = 3;
+function updateData(){
+// Get the data again
+	if (currentJson < max_json_files){
+	jsonUrl = "static/json/"+currentJson+".json";
+	clearSVG();
+    frame(jsonUrl);
+	currentJson += 1;
+	}
+}
+
+setInterval(updateData,2000);
 
 
-	<script>
-		var currentJson = 0,
-            w = 1280,
-		    h = 800,
-		    r = 720,
-		    x = d3.scale.linear().range([0, r]),
-		    y = d3.scale.linear().range([0, r]),
-		    node,
-		    root;
 
-		var pack = d3.layout.pack()
-		    .size([r, r])
-		    .value(function(d) { return d.size; })
 
-		var vis = d3.select("body").insert("svg:svg", "h2")
-		    .attr("width", w)
-		    .attr("height", h)
-		  .append("svg:g")
-		    .attr("transform", "translate(" + (w - r) / 2 + "," + (h - r) / 2 + ")");
+</script>
 
-		d3.json("static/0.json", function(data) {
-		  node = root = data;
 
-		  var nodes = pack.nodes(root);
 
-		  vis.selectAll("circle")
-		      .data(nodes)
-		    .enter().append("svg:circle")
-		      .attr("class", function(d) { return d.children ? "parent" : "child"; })
-		      .attr("cx", function(d) { return d.x; })
-		      .attr("cy", function(d) { return d.y; })
-		      .attr("r", function(d) { return d.r; })
 
-		  vis.selectAll("text")
-		      .data(nodes)
-		    .enter().append("svg:text")
-		      .attr("class", function(d) { return d.children ? "parent" : "child"; })
-		      .attr("x", function(d) { return d.x; })
-		      .attr("y", function(d) { return d.y; })
-		      .attr("dy", ".35em")
-		      .attr("text-anchor", "middle")
-		      .style("opacity", function(d) { return d.r > 20 ? 1 : 0; })
-		      .text(function(d) { return d.name; });
-		});
 
-        setTimeout(setInterval(update, 1000), 1000);
 
-        function update() {
-            var jsonLoc = "static/"+currentJson+".json";
-            d3.json(jsonLoc, function(data) {
-                node = root = data;
 
-                var nodes = pack.nodes(root);
 
-                vis.selectAll("circle")
-                    .data(nodes)
-                    .transition()
-                    .duration(1000)
-                    .attr("class", function(d) { return d.children ? "parent" : "child"; })
-                    .attr("cx", function(d) { return d.x; })
-                    .attr("cy", function(d) { return d.y; })
-                    .attr("r", function(d) { return d.r; });
 
-                vis.selectAll("text")
-                    .data(nodes)
-                    .transition(1)
-                    .duration(1000)
-                    .attr("class", function(d) { return d.children ? "parent" : "child"; })
-                    .attr("x", function(d) { return d.x; })
-                    .attr("y", function(d) { return d.y; })
-                    .attr("dy", ".35em")
-                    .attr("text-anchor", "middle")
-                    .style("opacity", function(d) { return d.r > 20 ? 1 : 0; })
-                    .text(function(d) { return d.name; });
-            });
-            currentJson += 1;
-        }
 
-		var data; // a global
 
-	</script>
-</body>
-</html>
+
+
+
+
+
+
+
