--- a/web/templates/index4.html
+++ b/web/templates/index4.html
@@ -6,6 +6,14 @@
   stroke: black;
   opacity : 0.75;
 }
+.link {
+  stroke: white;
+}
+.author {
+  fill: white;
+  stroke: black;
+  opacity : 0.75;
+}
 </style>
 <body bgcolor = #111111>
 <script src="http://d3js.org/d3.v3.min.js"></script>
@@ -14,14 +22,30 @@
 var width = 2000,
     height = 2000,
     padding = 1.5, // separation between same-color circles
-    currentJson = 0;
+    currentJson = 0,
+    AuthCount = 0,
+    AuthPos= [{x:(width/2),y:50},
+              {x:(width-50),y:(height/2)},
+              {x:(width/2),y:(height-50)},
+              {x:50,y:(height/2)},
+              {x:(3*width/4),y:50},
+              {x:(width-50),y:(3*height/4)},
+              {x:(width/3),y:(height-50)},
+              {x:50,y:(height/3)},
+              {x:(width-50),y:(height/3)},
+              {x:(3*width/4),y:(height-50)},
+              {x:50,y:(height/3)},
+              {x:(width/3),y:50}];
 
 
 var nodes = [];
+var links = [];
+var authors =[]; 
+
 var force = d3.layout.force()
     .nodes(nodes)
     .size([width, height])
-    .gravity(.02)
+    .gravity(.05)
     .charge(0)
     .on("tick", tick);
 
@@ -32,25 +56,38 @@ var svg = d3.select("body").append("svg")
 
 var node = svg.selectAll(".node");
 var link = svg.selectAll(".link");
-
+//=========INIT=============
 var jsonLoc = "static/"+currentJson+".json"; 
 d3.json(jsonLoc, function(json) {
+  var Auth_node = {x:AuthPos[0].x, y: AuthPos[0].y,
+                   name:json.author,
+                   fixed:true,
+                   radius:50};
+  authors.push(Auth_node);
+  
   for (var i = 0; i < json.children.length; i++){
         var violation = 0 ;
         for (var v = 0; v < json.state.length;v++){
-          if (json.children[i].name = json.state[v].name){
+          if (json.children[i].name == json.state[v].name){
             violation = json.state[v].size;
           }
         }
-        var newClass = {name:json.children[i].name, 
+        var newClass = {x:width/2,y:height/2,
+                        name:json.children[i].name, 
                         radius:scale(json.children[i].size),
                         violation:violation,
                         size:json.children[i].size
                       };
-        nodes.push(newClass);   
+        nodes.push(newClass); 
+        
+        var newlink = {source:Auth_node,
+                       target:newClass,
+                       width:1}; 
+        links.push(newlink);
+
   }
 });
-
+//=========INIT=============
 function tick() {
   node
       .each(collide(.7))
@@ -61,7 +98,10 @@ function tick() {
       .attr("x1", function(d) { return d.source.x; })
       .attr("y1", function(d) { return d.source.y; })
       .attr("x2", function(d) { return d.target.x; })
-      .attr("y2", function(d) { return d.target.y; });
+      .attr("y2", function(d) { return d.target.y; })
+      .attr("stroke-width", function(d){
+        return (d.target.size > 0 ? d3.select(this).attr("stroke-width"): 0);
+      });
 }
 
 // Resolves collisions between d and all other circles.
@@ -125,17 +165,37 @@ function color(violation,size){
 function update(){
   // console.log(nodes);
   if (currentJson == 0){
+    node = svg.selectAll(".author")
+              .data(authors)
+              .enter().insert("circle")
+              .attr("cx",  function(d){return d.x})
+              .attr("cy",  function(d){return d.y})
+              .attr("fixed",function(d){return d.fixed})
+              .attr("class", "author")
+              .attr("name", function(d){return d.name;})
+              .attr("r", function(d){ return d.radius;})
+              .append("svg:title")
+              .text(function(d){return d.name;})
+              .call(force.drag);
+
     node = svg.selectAll(".node")
               .data(nodes)
               .enter().insert("circle")
+              .attr("x",  function(d){return d.x})
+              .attr("y",  function(d){return d.y})
               .attr("class", "node")
               .attr("name", function(d){return d.name;})
               .attr("r", function(d){ return d.radius;})
               .append("svg:title")
-              .text(function(d){return d.name})
+              .text(function(d){return d.name;})
               .call(force.drag);
 
-    link = svg.selectAll(".link");
+    link = svg.selectAll(".link")
+              .data(links)
+              .enter().insert("line")
+              .attr("class", "link")
+              .attr("stroke-width", 1);
+
   force.start();
   }else{
     jsonLoc = "static/"+currentJson+".json"; 
@@ -170,39 +230,7 @@ function update(){
 
   currentJson += 1;
   console.log(currentJson);
-  // var jsonLoc = "static/"+currentJson+".json"; 
-  // d3.json(jsonLoc, function(json) {
-  // //=============
-
-  // for (var i = 0; i < json.children.length; i++){
-  //   var newClass = {x:0,y:0
-  //                   // name:json.children[i].name, 
-  //                   // class:node,
-  //                   // r:scale(json.children[i].size)
-  //                 };
-  //   // console.log(newClass);
-  //   nodes.push(newClass);
-  //   node = node.data(nodes);
-  //   // console.log(nodes);
-  //   node.enter()
-  //       .insert("svg:circle")
-  //       .attr("class", "node")
-  //       .attr("name",json.children[i].name)
-  //       .attr("r", scale(json.children[i].size))
-  //       .append("svg:title")
-  //       .text(json.children[i].name)
-  //       .call(force.drag);
-  //   }
-  
-
-
-  // //=============
-  // force.start();
-  // });
-
-  
-  // console.log(nodes);
 }
 
-setInterval(update, 1000);
+setInterval(update, 2000);
 </script>
