--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -28,21 +28,21 @@ var width = 1250,
     currentJson = 0,
     AuthCount = 0,
     AuthPos= [{x:(width/2)  , y:50},//=====
-              {x:(width-50) , y:(height/2)},
-              {x:(width/2)  , y:(height-50)},
-              {x:50         , y:(height/2)},
-              {x:(3*width/4), y:50},   //====
-              {x:(width-50) , y:(3*height/4)},
-              {x:(width/3)  , y:(height-50)},
-              {x:50         , y:(height/3)},
-              {x:(width-50) , y:(height/3)},//======
-              {x:(3*width/4), y:(height-50)},
-              {x:50         , y:(height/3)},
-              {x:(width/3)  , y:50},
-              {x:(width-50) , y:50},//=====
-              {x:(width-50) , y:(height - 50)},
-              {x:50         , y:(height-50)},
-              {x:50         , y:50}];
+              {x:(width-50) , y:(height/2 - 50)},
+              {x:(width/2)  , y:(height-75)},
+              {x:50         , y:(height/2 - 50)},
+              {x:width/2+Math.sqrt(2)*width/4 - 50, y:(height/2-Math.sqrt(2)*height/4 + 50)},   //====
+              {x:width/2+Math.sqrt(2)*width/4 - 50, y:(height/2+Math.sqrt(2)*height/4 - 50)},   //====
+              {x:width/2-Math.sqrt(2)*width/4 + 50, y:(height/2+Math.sqrt(2)*height/4 - 75)},   //====
+              {x:width/2-Math.sqrt(2)*width/4 + 50, y:(height/2-Math.sqrt(2)*height/4 + 50)},   //====
+              {x:width/2 + width/4 - 125, y:(height/2-Math.sqrt(3)*height/4 + 25)},   //====
+              {x:width/2 +Math.sqrt(3)*width/4 - 25, y:(height/2 -height/4 + 75)},   //====
+              {x:width/2 +Math.sqrt(3)*width/4, y:(height/2 +height/4 - 100)},   //====
+              {x:width/2 +width/4 - 100, y:(height/2+Math.sqrt(3)*height/4 - 50)},   //====
+              {x:width/2 -width/4 + 75, y:(height/2+Math.sqrt(3)*height/4 - 50)},   //====
+              {x:width/2 -Math.sqrt(3)*width/4 + 25, y:(height/2 +height/4 - 125)},   //====
+              {x:width/2 -Math.sqrt(3)*width/4 + 25, y:(height/2 -height/4 + 75)},   //====
+              {x:width/2 -width/4 + 75, y:(height/2-Math.sqrt(3)*height/4 + 25)}];
 
 
 var nodes = [];
@@ -52,8 +52,9 @@ var authors =[];
 var force = d3.layout.force()
     .nodes(nodes)
     .size([width, height])
-    .gravity(.05)
-    .charge(0)
+    .charge(-120)
+    .linkDistance(20)
+    .gravity(0.5)
     .on("tick", tick);
 
 var svg = d3.select("body").append("svg")
